CMAKE_MINIMUM_REQUIRED(VERSION 3.15.0)
PROJECT(run VERSION 0.1.0)

set(CMAKE_CXX_STANDARD 17)

# enable_testing()

# INCLUDE(cmake/utils.cmake)
# INCLUDE(cmake/gtest.cmake)

# ADD_SUBDIRECTORY(replica)
# ADD_SUBDIRECTORY(utils)
# add_subdirectory(test)
add_subdirectory(playground)
add_subdirectory(ex)

set(CMAKE_CXX_STANDARD 17)