SET(MODULE_NAME run-utils)

FILE(GLOB_RECURSE CPP_FILES ${CMAKE_CURRENT_LIST_DIR}/*.cpp ${CMAKE_CURRENT_LIST_DIR}/*.hpp ${CMAKE_CURRENT_LIST_DIR}/*.h)

ADD_LIBRARY(${MODULE_NAME} STATIC ${CPP_FILES})
set_target_properties(${MODULE_NAME} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")

TARGET_COMPILE_FEATURES(${MODULE_NAME} PRIVATE cxx_std_17)