set(COMPONENT_NAME cpp-concurrency-in-action)
CONFIGURE_MODULE(${COMPONENT_NAME} ${CMAKE_CURRENT_LIST_DIR} TARGET_LIST)

# Enable pthread.
FIND_PACKAGE(Threads REQUIRED)

IF(CMAKE_THREAD_LIBS_INIT)
  FOREACH(TARGET ${TARGET_LIST})
    TARGET_LINK_LIBRARIES(${TARGET} PUBLIC "${CMAKE_THREAD_LIBS_INIT}")
  ENDFOREACH(TARGET ${TARGET_LIST})
ENDIF(CMAKE_THREAD_LIBS_INIT)
